[package]
name = "wurl"
description = "WebSockets CLI for developers"
version = "0.1.0"
authors = ["Espen Henriksen <dev+wurl@henriksen.is>"]
keywords = ["websocket", "ws", "cli", "devtool"]
license = "GPL-3.0"
repository = "https://github.com/esphen/wurl"
readme = "README.md"

[[bin]]
doc = false
name = "wurl"
path = "src/bin/wurl.rs"
required-features = ["cli"]

[[bin]]
doc = false
name = "wurl-auth"
path = "src/bin/wurl-auth.rs"
required-features = ["http", "cli"]

[dependencies]
url = "1.7.0"
log = "0.4.1"

[dependencies.ws]
version = "0.7.6"
features = ["ssl"]

[dependencies.clap]
optional = true
version = "2.31.2"
features = ["yaml"]

[dependencies.rprompt]
optional = true
version = "1.0.3"

[dependencies.stderrlog]
optional = true
version = "0.3.0"

[dependencies.futures]
optional = true
version = "0.1"

[dependencies.hyper]
optional = true
version = "0.11"

[dependencies.hyper-tls]
optional = true
version = "0.1.3"

[dependencies.tokio-core]
optional = true
version = "0.1"

[features]
default = ["cli"]
cli = ["clap", "rprompt", "stderrlog"]
http = ["futures", "hyper", "hyper-tls", "tokio-core"]
