[package]
name = "wurl"
description = "WebSocket CLI for developers"
version = "0.1.1-alpha.0"
authors = ["Espen Henriksen <dev+wurl@henriksen.is>"]
keywords = ["websocket", "ws", "cli", "devtool"]
license = "GPL-3.0"
repository = "https://github.com/esphen/wurl"
readme = "README.md"


[[bin]]
doc = false
name = "wurl"
path = "src/bin/wurl.rs"
required-features = ["cli"]


[dependencies]
url = "1.7.0"
log = "0.4.1"

[dependencies.ws]
version = "0.9.0"
features = ["ssl"]

[dependencies.clap]
optional = true
version = "2.31.2"

[dependencies.rprompt]
optional = true
version = "1.0.3"

[dependencies.stderrlog]
optional = true
version = "0.3.0"


[build-dependencies]
clap = "2.31.2"
log = "0.4.1"
rprompt = "1.0.3"
stderrlog = "0.4.0"

[build-dependencies.ws]
version = "0.9.0"
features = ["ssl"]


[features]
default = ["cli"]
cli = ["clap", "rprompt", "stderrlog"]
